--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,13 @@ html {
   --darkModeTransition: color 0.3s ease-in-out, background 0.3s ease-in-out;
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    background: var(--dark-mode-bg-color);
+    color: var(--dark-mode-text-color);
+  }
+}
+
 .dark-theme {
   background: var(--dark-mode-bg-color);
   color: var(--dark-mode-text-color);
